--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "gatsby-minimal-portfolio-blog",
-    "description": "GatsbyJS starter for a minimal portfolio website with blog. Suitable for developers.",
+    "name": "felfele.org",
+    "description": "Website for the Felfele Foundation",
     "version": "1.0.0",
-    "author": "Sai Krishna",
+    "author": "Mark Vujevits",
     "bugs": {
-        "url": "https://github.com/s-kris/gatsby-minimal-portfolio-blog/issues"
+        "url": "https://github.com/felfele/felfele.com/issues"
     },
     "dependencies": {
         "gatsby": "^2.0.19",
@@ -36,6 +36,7 @@
         "react-vertical-timeline-component": "^2.3.1",
         "typeface-merriweather": "0.0.43",
         "typeface-montserrat": "0.0.43",
+        "typeface-roboto": "0.0.54",
         "typography": "^0.16.17",
         "typography-theme-github": "^0.15.10",
         "typography-theme-wordpress-2016": "^0.15.10"
@@ -46,13 +47,13 @@
         "gh-pages": "^1.2.0",
         "prettier": "^1.14.2"
     },
-    "homepage": "",
+    "homepage": "https://felfele.org",
     "keywords": [],
     "license": "MIT",
     "main": "n/a",
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/s-kris/gatsby-minimal-portfolio-blog.git"
+        "url": "git+https://github.com/felfele/felfele.com.git"
     },
     "scripts": {
         "dev": "gatsby develop",
