--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
         "react-responsive-modal": "^3.5.1",
         "react-typography": "^0.16.13",
         "react-vertical-timeline-component": "^2.3.1",
-        "typeface-merriweather": "0.0.72",
+        "typeface-roboto": "0.0.54",
         "typography": "^0.16.17",
         "typography-theme-github": "^0.15.10",
         "typography-theme-wordpress-2016": "^0.15.10"
