--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "gatsby-source-filesystem": "^2.0.2",
         "gatsby-transformer-remark": "^2.1.6",
         "gatsby-transformer-sharp": "^2.1.3",
+        "hamburgers": "^1.1.3",
         "lodash": "^4.17.11",
         "prismjs": "^1.15.0",
         "react": "^16.5.1",
@@ -32,6 +33,7 @@
         "react-helmet": "^5.2.0",
         "react-icons": "^3.2.2",
         "react-responsive-modal": "^3.5.1",
+        "react-reveal": "^1.2.2",
         "react-typography": "^0.16.13",
         "react-vertical-timeline-component": "^2.3.1",
         "typeface-roboto": "0.0.54",
