--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "lodash": "^4.17.11",
         "prismjs": "^1.15.0",
         "react": "^16.5.1",
+        "react-device-detect": "^1.6.2",
         "react-dom": "^16.5.1",
         "react-flexbox-grid": "^2.1.2",
         "react-hamburger-menu": "^1.1.1",
