started to implement new design, youngSerif typeface hacked, it's not on npm yet

--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
         "react-responsive-modal": "^3.5.1",
         "react-typography": "^0.16.13",
         "react-vertical-timeline-component": "^2.3.1",
+        "typeface-nunito-sans": "0.0.72",
         "typeface-roboto": "0.0.54",
+        "typeface-youngserif": "0.0.0",
         "typography": "^0.16.17",
         "typography-theme-github": "^0.15.10",
         "typography-theme-wordpress-2016": "^0.15.10"
