--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "dependencies": {
         "gatsby": "^2.0.19",
+        "gatsby-image": "^2.1.2",
         "gatsby-plugin-feed": "^2.0.8",
         "gatsby-plugin-manifest": "^2.0.5",
         "gatsby-plugin-offline": "^2.0.5",
