--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "url": "https://github.com/felfele/felfele.com/issues"
     },
     "dependencies": {
+        "@weknow/gatsby-remark-twitter": "^0.2.1",
         "gatsby": "^2.0.19",
         "gatsby-image": "^2.1.2",
         "gatsby-plugin-feed": "^2.0.8",
@@ -37,8 +38,7 @@
         "react-responsive-modal": "^3.5.1",
         "react-typography": "^0.16.13",
         "react-vertical-timeline-component": "^2.3.1",
-        "typeface-nunito-sans": "0.0.72",
-        "typeface-youngserif": "0.0.0"
+        "typeface-nunito-sans": "0.0.72"
     },
     "devDependencies": {
         "eslint": "^4.19.1",
