--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "gatsby-plugin-react-helmet": "^3.0.0",
         "gatsby-plugin-sharp": "^2.0.6",
         "gatsby-plugin-sitemap": "^2.0.2",
+        "gatsby-plugin-twitter": "^2.1.2",
         "gatsby-plugin-typography": "^2.2.0",
         "gatsby-remark-autolink-headers": "^2.0.16",
         "gatsby-remark-copy-linked-files": "^2.0.5",
@@ -37,7 +38,8 @@
         "react-responsive-modal": "^3.5.1",
         "react-typography": "^0.16.13",
         "react-vertical-timeline-component": "^2.3.1",
-        "typeface-nunito-sans": "0.0.72"
+        "typeface-nunito-sans": "0.0.72",
+        "typeface-youngserif": "0.0.75"
     },
     "devDependencies": {
         "eslint": "^4.19.1",
