--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,9 @@ os:
   - osx
 
 node_js:
-  - "node"
-  - "lts/*"
-  - "7"
-  - "8"
+  - "10"
 
 script:
   - npm install
   - npm run lint
+  - npm run build
