--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "version": "1.0.0",
     "author": "Mark Vujevits",
     "bugs": {
-        "url": "https://github.com/felfele/felfele.com/issues"
+        "url": "https://github.com/felfele/felfele.org/issues"
     },
     "dependencies": {
         "gatsby": "^2.19.17",
@@ -35,6 +35,7 @@
         "react-hamburger-menu": "^1.1.1",
         "react-helmet": "^5.2.1",
         "react-icons": "^3.9.0",
+        "react-responsive": "^8.0.3",
         "react-responsive-modal": "^3.6.0",
         "react-typography": "^0.16.19",
         "react-vertical-timeline-component": "^2.5.0",
