Fixed responsive design, made page composable, fixed legal & blog

--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "main": "n/a",
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/felfele/felfele.com.git"
+        "url": "git+https://github.com/felfele/felfele.org.git"
     },
     "scripts": {
         "dev": "gatsby develop",
