Fixed gatsby imports, added npm clean command

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
         "build": "gatsby build",
         "deploy": "gatsby build && gh-pages -d public",
         "fix-semi": "eslint --quiet --ignore-pattern node_modules --ignore-pattern public --parser babel-eslint --no-eslintrc --rule '{\"semi\": [2, \"never\"], \"no-extra-semi\": [2]}' --fix gatsby-node.js",
-        "check": "npm run lint && npm run build"
+        "check": "npm run lint && npm run build",
+        "clean": "gatsby clean"
     }
 }
