Fixed mobile sizes by adding media query to styles.css

--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
         "fix-semi": "eslint --quiet --ignore-pattern node_modules --ignore-pattern public --parser babel-eslint --no-eslintrc --rule '{\"semi\": [2, \"never\"], \"no-extra-semi\": [2]}' --fix gatsby-node.js",
         "check": "npm run lint && npm run build",
         "clean": "gatsby clean",
-        "serve": "serve -l 8000 public"
+        "serve": "serve -l 8000 public",
+        "prod": "npm run clean && npm run build && npm run serve"
     }
 }
