--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "url": "https://github.com/felfele/felfele.org/issues"
     },
     "dependencies": {
+        "axios": "^0.19.2",
         "gatsby": "^2.19.17",
         "gatsby-image": "^2.2.41",
         "gatsby-plugin-feed": "^2.3.27",
