--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
         "gatsby-image": "^2.2.41",
         "gatsby-plugin-feed": "^2.3.27",
         "gatsby-plugin-manifest": "^2.2.41",
-        "gatsby-plugin-offline": "^2.2.10",
         "gatsby-plugin-react-helmet": "^3.1.22",
+        "gatsby-plugin-remove-serviceworker": "^1.0.0",
         "gatsby-plugin-sharp": "^2.4.5",
         "gatsby-plugin-sitemap": "^2.2.27",
         "gatsby-plugin-twitter": "^2.1.19",
