--- a/package.json
+++ b/package.json
@@ -48,8 +48,7 @@
         "eslint": "^4.19.1",
         "eslint-plugin-react": "^7.18.3",
         "gh-pages": "^1.2.0",
-        "prettier": "^1.19.1",
-        "serve": "^11.3.0"
+        "prettier": "^1.19.1"
     },
     "homepage": "https://felfele.org",
     "keywords": [],
@@ -71,7 +70,7 @@
         "fix-semi": "eslint --quiet --ignore-pattern node_modules --ignore-pattern public --parser babel-eslint --no-eslintrc --rule '{\"semi\": [2, \"never\"], \"no-extra-semi\": [2]}' --fix gatsby-node.js",
         "check": "npm run lint && npm run build",
         "clean": "gatsby clean",
-        "serve": "serve -l 8000 public",
+        "serve": "gatsby serve -p 8000",
         "prod": "npm run clean && npm run build && npm run serve"
     }
 }
