--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "react-hamburger-menu": "^1.1.1",
         "react-helmet": "^5.2.1",
         "react-icons": "^3.9.0",
+        "react-modal": "^3.11.2",
         "react-responsive": "^8.0.3",
         "react-responsive-modal": "^3.6.0",
         "react-typography": "^0.16.19",
