--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     },
     "dependencies": {
         "axios": "^0.19.2",
-        "gatsby": "^2.19.17",
+        "gatsby": "^2.20.10",
         "gatsby-image": "^2.2.41",
         "gatsby-plugin-feed": "^2.3.27",
         "gatsby-plugin-manifest": "^2.2.41",
@@ -30,7 +30,7 @@
         "hamburgers": "^1.1.3",
         "lodash": "^4.17.15",
         "prismjs": "^1.19.0",
-        "react": "^16.12.0",
+        "react": "^16.13.1",
         "react-device-detect": "^1.11.14",
         "react-dom": "^16.12.0",
         "react-hamburger-menu": "^1.1.1",
@@ -48,6 +48,7 @@
     "devDependencies": {
         "eslint": "^4.19.1",
         "eslint-plugin-react": "^7.18.3",
+        "gatsby-plugin-goatcounter": "^0.3.1",
         "gh-pages": "^1.2.0",
         "prettier": "^1.19.1"
     },
