--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "react-icons": "^3.9.0",
         "react-modal": "^3.11.2",
         "react-responsive": "^8.0.3",
+        "react-responsive-carousel": "^3.2.7",
         "react-responsive-modal": "^3.6.0",
         "react-typography": "^0.16.19",
         "react-vertical-timeline-component": "^2.5.0",
