--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dependencies": {
         "axios": "^0.19.2",
         "gatsby": "^2.20.10",
+        "gatsby-background-image": "^1.1.1",
         "gatsby-image": "^2.2.41",
         "gatsby-plugin-feed": "^2.3.27",
         "gatsby-plugin-manifest": "^2.2.41",
